<resources>
    <string name="app_name">CameraUseTwo</string>
    <string name="singleCapture">单拍</string>
    <string name="burstCapture">连拍</string>
    <string name="scanCode">扫码</string>
    <string name="switchResolution">切分辨率</string>
    <string name="setting">设置</string>
    <string name="gallery">图库</string>
    <string name="led_open">打开补光灯</string>
    <string name="led_close">关闭补光灯</string>
    <string name="doNotTriggerScanningRepeatedly">勿重复开启扫码</string>
    <string name="mediaImageGroup">媒体图片组</string>
    <string name="mediaImageDetail">媒体图片详情</string>
    <string name="fullScreen">全屏</string>
    <string name="fullScreenExit">退出全屏</string>
    <string name="shrink">缩小</string>
    <string name="enlarge">放大</string>
    <string name="turnLeft">左转</string>
    <string name="turnRight">右转</string>
    <string name="loadImageFail">图片加载失败</string>
    <string name="info">信息</string>
    <string name="cancel">取消</string>
    <string name="neutral">中性</string>
    <string name="ensure">确定</string>
    <string name="deviceInfo">设备信息</string>
    <string name="notice">温馨提示</string>
    <string name="iKonw">我知道了</string>
    <string name="switchCamera">切换相机</string>
    <string name="cameraSetting">相机设置</string>
    <string name="functionSetting">功能设置</string>
    <string name="brightness">亮度</string>
    <string name="contrast">对比度</string>
    <string name="gain">增益</string>
    <string name="gamma">Gamma</string>
    <string name="hue">色调</string>
    <string name="sharpness">锐度</string>
    <string name="saturation">饱和度</string>
    <string name="cameraAreBasedOnThePermission">拍照需要该权限</string>
    <string name="agree">同意</string>
    <string name="refuse">拒绝</string>
    <string name="youNeedToAllowNecessaryPermissionInSettingManually">你需要手动在设置中授予该权限</string>
    <string name="cameraNotDetected">未检测到摄像头</string>
    <string name="burstCaptureRunning">连拍进行中</string>
    <string name="singleCaptureRunning">单拍进行中</string>
    <string name="noClickRepeat">勿重复点击</string>
    <!-- format -->
    <string name="formatFFps">%1$.0f fps</string>
</resources>