<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/mainActivityMenuDeviceInfo"
        android:contentDescription="@string/deviceInfo"
        android:icon="@drawable/ic_vacuum_cos_24dp"
        android:title="@string/deviceInfo"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mainActivityMenuCameraSetting"
        android:contentDescription="@string/cameraSetting"
        android:icon="@drawable/ic_settings_photo_camera_cos_24dp"
        android:title="@string/cameraSetting"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mainActivityMenuSwitchCamera"
        android:contentDescription="@string/switchCamera"
        android:title="@string/switchCamera" />
</menu>