<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false">

    <FrameLayout
        android:layout_width="@dimen/dp_0"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:background="@color/black">

        <FrameLayout
            android:id="@+id/cameraMainFragmentFl"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--建议将 width 和 height 都设为 match_parent-->
            <!--1. AspectRatioTextureView 内部重写 onMeasure 根据 setAspectRatio 传入的宽高比自动缩放-->
            <!--2. 配合 FrameLayout 黑色背景，画面比例与屏幕不一致时会自动呈现上下或左右黑边。保证画面 100% 完整且绝不拉伸变形-->
            <com.jiangdg.ausbc.widget.AspectRatioTextureView
                android:id="@+id/cameraMainFragmentArtv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center" />
        </FrameLayout>

        <com.qtone.camerause.widget.scan.ViewFinderView
            android:id="@+id/cameraMainFragmentVfv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:vvFrameCornerColor="@color/color_00C9A7"
            app:vvFrameCornerRadius="@dimen/dp_10"
            app:vvFrameRatio="0.9"
            app:vvLaserStyle="line"
            app:vvMaskColor="@color/color_60000000"
            app:vvViewFinderStyle="classic" />

        <com.qtone.camerause.widget.roi.MultiRoiOverlayView
            android:id="@+id/cameraMainFragmentMrov"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="@dimen/dp_0"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/background"
        android:orientation="vertical"
        android:padding="@dimen/dp_20">

        <com.qtone.camerause.widget.button.ShimmerButton
            android:id="@+id/cameraMainFragmentSbSingleCapture"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0"
            android:layout_weight="1"
            app:sbPrimaryColor="@color/color_FF9800"
            app:sbShape="square"
            app:sbText="@string/singleCapture"
            app:sbTextColor="@color/white"
            app:sbTextSize="@dimen/sp_12"
            app:sbTriggerMode="click"
            tools:ignore="NestedWeights" />

        <com.qtone.camerause.widget.button.ShimmerButton
            android:id="@+id/cameraMainFragmentSbBurstCapture"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0"
            android:layout_marginVertical="@dimen/dp_10"
            android:layout_weight="1"
            app:sbPrimaryColor="@color/color_00BFA5"
            app:sbShape="square"
            app:sbText="@string/burstCapture"
            app:sbTextColor="@color/white"
            app:sbTextSize="@dimen/sp_12"
            app:sbTriggerMode="longPressCharge" />

        <com.qtone.camerause.widget.button.ShimmerButton
            android:id="@+id/cameraMainFragmentSbScanCode"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_weight="1"
            app:sbPrimaryColor="@color/color_7C4DFF"
            app:sbShape="square"
            app:sbText="@string/scanCode"
            app:sbTextColor="@color/white"
            app:sbTextSize="@dimen/sp_12"
            app:sbTriggerMode="longPressCharge" />

        <!--普通按钮-->
        <!--style="@style/Widget.MaterialComponents.Button"-->
        <!--带图标-->
        <!--style="@style/Widget.MaterialComponents.Button.Icon"-->
        <!--无背景 + 只有文字-->
        <!--style="@style/Widget.MaterialComponents.Button.TextButton"-->
        <!--描边按钮-->
        <!--style="@style/Widget.MaterialComponents.Button.OutlinedButton"-->
        <!--扁平按钮 + 有背景 + 无阴影-->
        <!--style="@style/Widget.MaterialComponents.Button.UnelevatedButton"-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/cameraMainFragmentMbGallery"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0"
            android:layout_marginHorizontal="@dimen/dp_2"
            android:layout_weight="1"
            android:filterTouchesWhenObscured="true"
            android:insetLeft="@dimen/dp_0"
            android:insetTop="@dimen/dp_0"
            android:insetRight="@dimen/dp_0"
            android:insetBottom="@dimen/dp_0"
            android:text="@string/gallery"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_10"
            app:backgroundTint="@color/basic"
            app:cornerRadius="@dimen/dp_12"
            app:rippleColor="@color/color_1D80C7" />
    </LinearLayout>
</LinearLayout>